<resources>
    <string name="app_name">Quiz_Game</string>
    <string name="quiz_game">Quiz_game</string>
    <string name="sign_up">sign Up</string>
    <string name="Test_sign_up">Sign Up</string>
    <string name="forget_password">Forget Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="signIn_forget_password">Forget Password?</string>
    <string name="slogan_sign_in">sign In</string>
    <string name="start_game">Start Game</string>
    <string name="sign_out">sign Out</string>
    <string name="time">Time</string>
    <string name="_0">0</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="wrong_answer">Wrong Answer</string>
    <string name="question">Question</string>
    <string name="finish_game">Finish Game</string>
    <string name="next_que">Next Que.</string>
</resources>